<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.MetasFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metapasos"
            android:textSize="25sp"
            android:padding="18dp"
            android:background="@color/metas"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metakcal"
            android:textSize="25sp"
            android:padding="18dp"
            android:layout_marginTop="170dp"
            android:background="@color/metas"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metacuadras"
            android:textSize="25sp"
            android:padding="18dp"
            android:layout_marginTop="170dp"
            android:background="@color/metas"
            android:textAlignment="center"
            android:textColor="@color/white"/>
    </LinearLayout>

</FrameLayout>