<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.OpcionesFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion_legal"
            android:textSize="25sp"
            android:padding="18dp"
            android:backgroundTint="@color/metas"
            android:textAlignment="center"
            android:layout_marginTop="90dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conectar_reloj"
            android:textSize="25sp"
            android:padding="18dp"
            android:layout_marginTop="90dp"
            android:backgroundTint="@color/metas"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/robotomonowght"
            android:text="@string/cerrar_sesion"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"/>
    </LinearLayout>
</FrameLayout>